--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,14 @@
     font-family: 'Outfit', sans-serif;
 }
 
+/* palette */
+
+:root{
+    --White: hsl(0, 0%, 100%);
+    --Light-gray: hsl(212, 45%, 89%);
+    --Grayish-blue: hsl(220, 15%, 55%);
+    --Dark-blue: hsl(218, 44%, 22%);
+}
 .wrapper{
     width: 100%;
     height: 100vh;
@@ -9,8 +17,31 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: var(--Light-gray);
 }
 
 .qr-container{
     width: 100%;
+}
+
+.qr-container img{
+    width: 100%;
+    display: block;
+}
+
+.qr-container, .box{
+    background-color: var(--White);
+}
+
+.box{
+    max-width: 400px ;
+}
+
+.custom-p{
+    color: var(--Dark-blue);
+    font-weight: 700;
+}
+
+.info-text{
+    color: var(--Grayish-blue);
 }
